src/pages/housing/housing.scss
.housing{
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 30px;
    margin-top: 100px;
    margin-bottom: 100px;

    @media screen and (max-width: 768px){
        margin-top: 10px;
        margin-bottom: 40px; 
    }

    .slideshow{
        @media screen and (max-width: 1240px){
            width: 95%;
            height: 415px; 
        }

        @media screen and (max-width: 768px){
            width: 90%;
            height: 255px;
            border-radius: 10px;
        }
    }

    .rental-location{
        width: 1240px;
        display: flex;
        flex-direction:row;
        justify-content: space-between;

        @media screen and (max-width: 1240px){
            width: 95%;
        }

        @media screen and (max-width: 768px){
            width: 90%;
            display: flex;
            flex-direction: column;
            gap: 20px;
        }

        .rental-informations{
            width: 60%;
            display: flex;
            flex-direction: column;
            gap: 10px;

            @media screen and (max-width: 768px){
                width: 100%;  
            }

            h3{
                font-size: 36px ;
                margin: 0px;
                color: #ff6060;
                @media screen and (max-width: 768px){
                    font-size: 18px;
                }
            }

            p{
                font-size: 18px;
                margin: 0px;
            
                @media screen and (max-width: 768px){
                    font-size: 14px;
                }
            }
        }

        .host-informations{
            width: 30%;
            display: flex;
            flex-direction: column;
            align-items: flex-end;
            justify-content: space-between;
            gap: 20px;

            @media screen and (max-width: 768px){
                width: 100%;
                display: flex;
                flex-direction: row-reverse;
                justify-content: space-between;
                align-items: center;
            }

            .host{
                display: flex;
                flex-direction: row;
                gap: 20px;
                align-items: center;
                .picture{
                    width: 64px;
                    height: 64px;
                    border-radius: 50px;
                    object-fit: cover;
                    @media screen and (max-width: 768px){
                        width: 32px;
                        height: 32px;
                    }
                }

                .host-name{
                    font-size: 18px;
                    margin: 0px;
                    color: #ff6060;
                    font-weight: 500;
                    text-align: right;
                    @media screen and (max-width: 768px){
                        font-size: 12px;
                    }
                }
            }
            
            .host-rating{
                width: 196px;
                height: 36px;
                text-align: right;
                display: flex;
                flex-direction: row;
                align-items: center;
                justify-content: flex-start;
                
                .star{
                    width: 36px;
                    height: 36px;

                    @media screen and (max-width: 768px){
                        width: 18px;
                        height: 18px; 
                    }
                }
            }
        }

        h3{
            font-size: 36px ;
            margin: 0px;
            color: #ff6060;
        }
        p{
            font-size: 18px;
            margin: 0px;
        }    
    }

    .rental-tags{
        width: 100%;
        display: flex;
        justify-content: flex-start;
        align-items: center;
        gap: 20px;

        @media screen and (max-width: 768px){
            width: 100%;
            gap: 10px;
        }

    }

    .info-container{
        width: 1240px;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        gap: 100px;
        
        @media screen and (max-width: 1240px){
            width: 95%;
        }
        
        @media screen and (max-width: 768px){
            display: flex;
            flex-direction: column;
            gap: 20px;
        }  
    }

    .collapse-container{
        width: 100%;

        @media screen and (max-width: 768px){
            width: 95%;
        }
    }

    .collapse{
        width: 100%;
    }
}

